// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PublicationForm /> fields <AbbreviationField /> should match the snapshot 1`] = `
<AbbreviationField
  form={
    Object {
      "data": Object {
        "publication": Object {
          "abbreviation": "sff",
          "id": "38a6666f-d3eb-4853-bd0a-add4d8ec369a",
          "name": "Spectres of Flumph Fortress",
          "official": false,
          "playtest": true,
          "publicationDate": "2013-08-15",
          "publisherName": "Spelljammer Publishing",
          "slug": "spectres-flumph-fortress",
        },
      },
      "onChangeAction": [MockFunction],
      "onSubmitAction": [MockFunction],
      "path": Array [
        "publication",
      ],
    }
  }
>
  <FormField
    className="publication-abbreviation-field"
    colWidth={null}
    inputId={null}
    label={null}
    path={
      Array [
        "publication",
      ]
    }
    prop="abbreviation"
  >
    <FormGroup
      className="form-field publication-abbreviation-field"
      colWidth={null}
    >
      <div
        className="form-group col form-field publication-abbreviation-field"
      >
        <label
          htmlFor="publication-abbreviation-input"
        >
          Abbreviation
        </label>
        <AbbreviationInput
          form={
            Object {
              "data": Object {
                "publication": Object {
                  "abbreviation": "sff",
                  "id": "38a6666f-d3eb-4853-bd0a-add4d8ec369a",
                  "name": "Spectres of Flumph Fortress",
                  "official": false,
                  "playtest": true,
                  "publicationDate": "2013-08-15",
                  "publisherName": "Spelljammer Publishing",
                  "slug": "spectres-flumph-fortress",
                },
              },
              "onChangeAction": [MockFunction],
              "onSubmitAction": [MockFunction],
              "path": Array [
                "publication",
              ],
            }
          }
        >
          <FormInput
            className={null}
            id="publication-abbreviation-input"
            onChange={[Function]}
            placeholder=""
            type="text"
            validStatus={null}
            value="sff"
          >
            <input
              className="form-control"
              id="publication-abbreviation-input"
              onChange={[Function]}
              placeholder=""
              type="text"
              value="sff"
            />
          </FormInput>
        </AbbreviationInput>
      </div>
    </FormGroup>
  </FormField>
</AbbreviationField>
`;

exports[`<PublicationForm /> fields <CancelButton /> should match the snapshot 1`] = `
<CancelButton
  form={
    Object {
      "data": Object {
        "publication": Object {
          "abbreviation": "sff",
          "id": "38a6666f-d3eb-4853-bd0a-add4d8ec369a",
          "name": "Spectres of Flumph Fortress",
          "official": false,
          "playtest": true,
          "publicationDate": "2013-08-15",
          "publisherName": "Spelljammer Publishing",
          "slug": "spectres-flumph-fortress",
        },
      },
      "onChangeAction": [MockFunction],
      "onSubmitAction": [MockFunction],
      "path": Array [
        "publication",
      ],
    }
  }
  isUpdate={false}
>
  <FormGroup
    className=""
    colWidth={null}
  >
    <div
      className="form-group col"
    >
      <PublicationFormCancelButton
        form={
          Object {
            "data": Object {
              "publication": Object {
                "abbreviation": "sff",
                "id": "38a6666f-d3eb-4853-bd0a-add4d8ec369a",
                "name": "Spectres of Flumph Fortress",
                "official": false,
                "playtest": true,
                "publicationDate": "2013-08-15",
                "publisherName": "Spelljammer Publishing",
                "slug": "spectres-flumph-fortress",
              },
            },
            "onChangeAction": [MockFunction],
            "onSubmitAction": [MockFunction],
            "path": Array [
              "publication",
            ],
          }
        }
        isUpdate={false}
      >
        <LinkButton
          block={true}
          buttonSize={null}
          buttonStyle="secondary"
          className={null}
          link={false}
          outline={true}
          url="/publications"
        >
          <Link
            className="btn btn-outline-secondary btn-block"
            to="/publications"
          >
            <a
              className="btn btn-outline-secondary btn-block"
              href="/publications"
              onClick={[Function]}
            >
              Cancel
            </a>
          </Link>
        </LinkButton>
      </PublicationFormCancelButton>
    </div>
  </FormGroup>
</CancelButton>
`;

exports[`<PublicationForm /> fields <NameField /> should match the snapshot 1`] = `
<NameField
  form={
    Object {
      "data": Object {
        "publication": Object {
          "abbreviation": "sff",
          "id": "38a6666f-d3eb-4853-bd0a-add4d8ec369a",
          "name": "Spectres of Flumph Fortress",
          "official": false,
          "playtest": true,
          "publicationDate": "2013-08-15",
          "publisherName": "Spelljammer Publishing",
          "slug": "spectres-flumph-fortress",
        },
      },
      "onChangeAction": [MockFunction],
      "onSubmitAction": [MockFunction],
      "path": Array [
        "publication",
      ],
    }
  }
>
  <FormField
    className="publication-name-field"
    colWidth={null}
    inputId={null}
    label={null}
    path={
      Array [
        "publication",
      ]
    }
    prop="name"
  >
    <FormGroup
      className="form-field publication-name-field"
      colWidth={null}
    >
      <div
        className="form-group col form-field publication-name-field"
      >
        <label
          htmlFor="publication-name-input"
        >
          Name
        </label>
        <NameInput
          form={
            Object {
              "data": Object {
                "publication": Object {
                  "abbreviation": "sff",
                  "id": "38a6666f-d3eb-4853-bd0a-add4d8ec369a",
                  "name": "Spectres of Flumph Fortress",
                  "official": false,
                  "playtest": true,
                  "publicationDate": "2013-08-15",
                  "publisherName": "Spelljammer Publishing",
                  "slug": "spectres-flumph-fortress",
                },
              },
              "onChangeAction": [MockFunction],
              "onSubmitAction": [MockFunction],
              "path": Array [
                "publication",
              ],
            }
          }
        >
          <FormInput
            className={null}
            id="publication-name-input"
            onChange={[Function]}
            placeholder=""
            type="text"
            validStatus={null}
            value="Spectres of Flumph Fortress"
          >
            <input
              className="form-control"
              id="publication-name-input"
              onChange={[Function]}
              placeholder=""
              type="text"
              value="Spectres of Flumph Fortress"
            />
          </FormInput>
        </NameInput>
      </div>
    </FormGroup>
  </FormField>
</NameField>
`;

exports[`<PublicationForm /> fields <PlaytestField /> should match the snapshot 1`] = `
<PlaytestField
  form={
    Object {
      "data": Object {
        "publication": Object {
          "abbreviation": "sff",
          "id": "38a6666f-d3eb-4853-bd0a-add4d8ec369a",
          "name": "Spectres of Flumph Fortress",
          "official": false,
          "playtest": true,
          "publicationDate": "2013-08-15",
          "publisherName": "Spelljammer Publishing",
          "slug": "spectres-flumph-fortress",
        },
      },
      "onChangeAction": [MockFunction],
      "onSubmitAction": [MockFunction],
      "path": Array [
        "publication",
      ],
    }
  }
>
  <FormField
    className="publication-playtest-field"
    colWidth={null}
    inputId={null}
    label={null}
    path={
      Array [
        "publication",
      ]
    }
    prop="playtest"
  >
    <FormGroup
      className="form-field publication-playtest-field"
      colWidth={null}
    >
      <div
        className="form-group col form-field publication-playtest-field"
      >
        <label
          htmlFor="publication-playtest-input"
        >
          Playtest
        </label>
        <PlaytestInput
          form={
            Object {
              "data": Object {
                "publication": Object {
                  "abbreviation": "sff",
                  "id": "38a6666f-d3eb-4853-bd0a-add4d8ec369a",
                  "name": "Spectres of Flumph Fortress",
                  "official": false,
                  "playtest": true,
                  "publicationDate": "2013-08-15",
                  "publisherName": "Spelljammer Publishing",
                  "slug": "spectres-flumph-fortress",
                },
              },
              "onChangeAction": [MockFunction],
              "onSubmitAction": [MockFunction],
              "path": Array [
                "publication",
              ],
            }
          }
        >
          <FormCheckboxInput
            className={null}
            id="publication-playtest-input"
            label={null}
            onChange={[Function]}
            validStatus={null}
            value={true}
          >
            <div
              className="custom-control custom-checkbox"
            >
              <input
                checked={true}
                className="custom-control-input"
                id="publication-playtest-input"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="custom-control-label"
                htmlFor="publication-playtest-input"
              />
            </div>
          </FormCheckboxInput>
        </PlaytestInput>
      </div>
    </FormGroup>
  </FormField>
</PlaytestField>
`;

exports[`<PublicationForm /> fields <PublicationDateField /> should match the snapshot 1`] = `
<PublicationDateField
  form={
    Object {
      "data": Object {
        "publication": Object {
          "abbreviation": "sff",
          "id": "38a6666f-d3eb-4853-bd0a-add4d8ec369a",
          "name": "Spectres of Flumph Fortress",
          "official": false,
          "playtest": true,
          "publicationDate": "2013-08-15",
          "publisherName": "Spelljammer Publishing",
          "slug": "spectres-flumph-fortress",
        },
      },
      "onChangeAction": [MockFunction],
      "onSubmitAction": [MockFunction],
      "path": Array [
        "publication",
      ],
    }
  }
>
  <FormField
    className="publication-publication-date-field"
    colWidth={null}
    inputId={null}
    label={null}
    path={
      Array [
        "publication",
      ]
    }
    prop="publicationDate"
  >
    <FormGroup
      className="form-field publication-publication-date-field"
      colWidth={null}
    >
      <div
        className="form-group col form-field publication-publication-date-field"
      >
        <label
          htmlFor="publication-publication-date-input"
        >
          Publication Date
        </label>
        <PublicationDateInput
          form={
            Object {
              "data": Object {
                "publication": Object {
                  "abbreviation": "sff",
                  "id": "38a6666f-d3eb-4853-bd0a-add4d8ec369a",
                  "name": "Spectres of Flumph Fortress",
                  "official": false,
                  "playtest": true,
                  "publicationDate": "2013-08-15",
                  "publisherName": "Spelljammer Publishing",
                  "slug": "spectres-flumph-fortress",
                },
              },
              "onChangeAction": [MockFunction],
              "onSubmitAction": [MockFunction],
              "path": Array [
                "publication",
              ],
            }
          }
        >
          <FormInput
            className={null}
            id="publication-publication-date-input"
            onChange={[Function]}
            placeholder=""
            type="text"
            validStatus={null}
            value="2013-08-15"
          >
            <input
              className="form-control"
              id="publication-publication-date-input"
              onChange={[Function]}
              placeholder=""
              type="text"
              value="2013-08-15"
            />
          </FormInput>
        </PublicationDateInput>
      </div>
    </FormGroup>
  </FormField>
</PublicationDateField>
`;

exports[`<PublicationForm /> fields <PublisherNameField /> should match the snapshot 1`] = `
<PublisherNameField
  form={
    Object {
      "data": Object {
        "publication": Object {
          "abbreviation": "sff",
          "id": "38a6666f-d3eb-4853-bd0a-add4d8ec369a",
          "name": "Spectres of Flumph Fortress",
          "official": false,
          "playtest": true,
          "publicationDate": "2013-08-15",
          "publisherName": "Spelljammer Publishing",
          "slug": "spectres-flumph-fortress",
        },
      },
      "onChangeAction": [MockFunction],
      "onSubmitAction": [MockFunction],
      "path": Array [
        "publication",
      ],
    }
  }
>
  <FormField
    className="publication-publisher-name-field"
    colWidth={null}
    inputId={null}
    label={null}
    path={
      Array [
        "publication",
      ]
    }
    prop="publisherName"
  >
    <FormGroup
      className="form-field publication-publisher-name-field"
      colWidth={null}
    >
      <div
        className="form-group col form-field publication-publisher-name-field"
      >
        <label
          htmlFor="publication-publisher-name-input"
        >
          Publisher Name
        </label>
        <PublisherNameInput
          form={
            Object {
              "data": Object {
                "publication": Object {
                  "abbreviation": "sff",
                  "id": "38a6666f-d3eb-4853-bd0a-add4d8ec369a",
                  "name": "Spectres of Flumph Fortress",
                  "official": false,
                  "playtest": true,
                  "publicationDate": "2013-08-15",
                  "publisherName": "Spelljammer Publishing",
                  "slug": "spectres-flumph-fortress",
                },
              },
              "onChangeAction": [MockFunction],
              "onSubmitAction": [MockFunction],
              "path": Array [
                "publication",
              ],
            }
          }
        >
          <FormInput
            className={null}
            id="publication-publisher-name-input"
            onChange={[Function]}
            placeholder=""
            type="text"
            validStatus={null}
            value="Spelljammer Publishing"
          >
            <input
              className="form-control"
              id="publication-publisher-name-input"
              onChange={[Function]}
              placeholder=""
              type="text"
              value="Spelljammer Publishing"
            />
          </FormInput>
        </PublisherNameInput>
      </div>
    </FormGroup>
  </FormField>
</PublisherNameField>
`;

exports[`<PublicationForm /> fields <SlugField /> should match the snapshot 1`] = `
<SlugField
  form={
    Object {
      "data": Object {
        "publication": Object {
          "abbreviation": "sff",
          "id": "38a6666f-d3eb-4853-bd0a-add4d8ec369a",
          "name": "Spectres of Flumph Fortress",
          "official": false,
          "playtest": true,
          "publicationDate": "2013-08-15",
          "publisherName": "Spelljammer Publishing",
          "slug": "spectres-flumph-fortress",
        },
      },
      "onChangeAction": [MockFunction],
      "onSubmitAction": [MockFunction],
      "path": Array [
        "publication",
      ],
    }
  }
>
  <FormField
    className="publication-slug-field"
    colWidth={null}
    inputId={null}
    label={null}
    path={
      Array [
        "publication",
      ]
    }
    prop="slug"
  >
    <FormGroup
      className="form-field publication-slug-field"
      colWidth={null}
    >
      <div
        className="form-group col form-field publication-slug-field"
      >
        <label
          htmlFor="publication-slug-input"
        >
          Slug
        </label>
        <SlugInput
          form={
            Object {
              "data": Object {
                "publication": Object {
                  "abbreviation": "sff",
                  "id": "38a6666f-d3eb-4853-bd0a-add4d8ec369a",
                  "name": "Spectres of Flumph Fortress",
                  "official": false,
                  "playtest": true,
                  "publicationDate": "2013-08-15",
                  "publisherName": "Spelljammer Publishing",
                  "slug": "spectres-flumph-fortress",
                },
              },
              "onChangeAction": [MockFunction],
              "onSubmitAction": [MockFunction],
              "path": Array [
                "publication",
              ],
            }
          }
        >
          <FormInput
            className={null}
            id="publication-slug-input"
            onChange={[Function]}
            placeholder=""
            type="text"
            validStatus={null}
            value="spectres-flumph-fortress"
          >
            <input
              className="form-control"
              id="publication-slug-input"
              onChange={[Function]}
              placeholder=""
              type="text"
              value="spectres-flumph-fortress"
            />
          </FormInput>
        </SlugInput>
      </div>
    </FormGroup>
  </FormField>
</SlugField>
`;

exports[`<PublicationForm /> fields <SubmitButton /> should match the snapshot 1`] = `
<SubmitButton
  disabled={false}
  form={
    Object {
      "data": Object {
        "publication": Object {
          "abbreviation": "sff",
          "id": "38a6666f-d3eb-4853-bd0a-add4d8ec369a",
          "name": "Spectres of Flumph Fortress",
          "official": false,
          "playtest": true,
          "publicationDate": "2013-08-15",
          "publisherName": "Spelljammer Publishing",
          "slug": "spectres-flumph-fortress",
        },
      },
      "onChangeAction": [MockFunction],
      "onSubmitAction": [MockFunction],
      "path": Array [
        "publication",
      ],
    }
  }
  isUpdate={false}
  status="initialized"
>
  <FormGroup
    className=""
    colWidth={null}
  >
    <div
      className="form-group col"
    >
      <PublicationFormSubmitButton
        disabled={false}
        form={
          Object {
            "data": Object {
              "publication": Object {
                "abbreviation": "sff",
                "id": "38a6666f-d3eb-4853-bd0a-add4d8ec369a",
                "name": "Spectres of Flumph Fortress",
                "official": false,
                "playtest": true,
                "publicationDate": "2013-08-15",
                "publisherName": "Spelljammer Publishing",
                "slug": "spectres-flumph-fortress",
              },
            },
            "onChangeAction": [MockFunction],
            "onSubmitAction": [MockFunction],
            "path": Array [
              "publication",
            ],
          }
        }
        isUpdate={false}
        status="initialized"
      >
        <FormSubmitWrapper
          block={true}
          disabled={false}
          form={
            Object {
              "data": Object {
                "publication": Object {
                  "abbreviation": "sff",
                  "id": "38a6666f-d3eb-4853-bd0a-add4d8ec369a",
                  "name": "Spectres of Flumph Fortress",
                  "official": false,
                  "playtest": true,
                  "publicationDate": "2013-08-15",
                  "publisherName": "Spelljammer Publishing",
                  "slug": "spectres-flumph-fortress",
                },
              },
              "onChangeAction": [MockFunction],
              "onSubmitAction": [MockFunction],
              "path": Array [
                "publication",
              ],
            }
          }
          outline={true}
        >
          <Button
            block={true}
            buttonSize="md"
            buttonStyle="primary"
            className={null}
            disabled={false}
            link={false}
            onClick={[Function]}
            outline={true}
          >
            <button
              className="btn btn-outline-primary btn-block"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Create Publication
            </button>
          </Button>
        </FormSubmitWrapper>
      </PublicationFormSubmitButton>
    </div>
  </FormGroup>
</SubmitButton>
`;
